# rivertime

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: check-permits.yml
src/permit_sniper/: __init__.py  api.py  booker.py  checker.py  cli.py  config.py  notifier.py  runner.py
