[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "permit-sniper"
version = "1.0.0"
description = "Monitor Recreation.gov for cancelled river permits on the Middle Fork Salmon, Main Salmon, and Selway rivers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27.0",
    "twilio>=9.0.0",
    "schedule>=1.2.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
permit-sniper = "permit_sniper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
